[package]
name = "gradwork-ca"
version = "0.1.0"
edition = "2024"
authors = ["Balder Huybreghs"]

[dependencies]
rand = "0.9.2"
vox_writer = "0.1.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
serde_json = "1.0.148"
toml = "0.9.8"
indicatif = "0.18.3"
rayon = "1.11.0"
